Adding separated api to update status and type
