# horusec-api/docs/swagger.yaml
@@ -4,10 +4,13 @@ definitions:
       description:
         type: string
     type: object
-  dto.UpdateVulnManagementData:
+  dto.UpdateVulnStatus:
     properties:
       status:
         type: string
+    type: object
+  dto.UpdateVulnType:
+    properties:
       type:
         type: string
     type: object
@@ -698,19 +701,85 @@ paths:
       - ApiKeyAuth: []
       tags:
       - Management
-  /api/repositories/{repositoryID}/management/{vulnerabilityID}:
+  /api/repositories/{repositoryID}/management/{vulnerabilityID}/status:
     put:
       consumes:
       - application/json
-      description: update vulnerability status and type
-      operationId: update-vuln-data
+      description: update vulnerability status
+      operationId: update-vuln-status
       parameters:
-      - description: type and status of vulnerability
+      - description: status of vulnerability
         in: body
-        name: UpdateVulnManagementData
+        name: UpdateVulnStatus
         required: true
         schema:
-          $ref: '#/definitions/dto.UpdateVulnManagementData'
+          $ref: '#/definitions/dto.UpdateVulnStatus'
+      - description: vulnerabilityID of the vulnerability
+        in: path
+        name: vulnerabilityID
+        required: true
+        type: string
+      - description: repositoryID of the repository
+        in: path
+        name: repositoryID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                content:
+                  type: string
+              type: object
+        "400":
+          description: BAD REQUEST
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                content:
+                  type: string
+              type: object
+        "404":
+          description: NOT FOUND
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                content:
+                  type: string
+              type: object
+        "500":
+          description: INTERNAL SERVER ERROR
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                content:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - Management
+  /api/repositories/{repositoryID}/management/{vulnerabilityID}/type:
+    put:
+      consumes:
+      - application/json
+      description: update vulnerability type
+      operationId: update-vuln-type
+      parameters:
+      - description: type of vulnerability
+        in: body
+        name: UpdateVulnType
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdateVulnType'
       - description: vulnerabilityID of the vulnerability
         in: path
         name: vulnerabilityID
